--- a/crates/swc_css_codegen/tests/fixture/selectors/class/output.css
+++ b/crates/swc_css_codegen/tests/fixture/selectors/class/output.css
@@ -10,3 +10,6 @@
 .﻿:after {
   content: "uFEFF";
 }
+.\32 8f99 {
+  color: red;
+}
